--- a/index.html
+++ b/index.html
@@ -11,39 +11,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <div class="row dashboard">
-        <div class="col-xl-3 col-lg-3 col-md-12 bg-profile">
-
-        </div>
-        <div class="col-xl-6 col-lg-6 col-md-12 flexbox-center">
-            <div class="row pb-4 pt-4">
-                <div class="col-12 pb-4">
-                    <img src="/logo-vmc-principal.png" class="img-center" alt="Logo VMCORREA" width="150">
-                </div>
-                <div class="col-12 px-4">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/akAIv5pLJRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-lg-3 col-md-12 bg-menu flexbox-center"> -->
-            <!-- <nav class="buttons-nav">
-                <a href="#"><i class="fa-solid fa-sitemap"></i> Organigrama</a>
-                <a href="#"><i class="fa-solid fa-list"></i> Recursos</a>
-                <a href="#"><i class="fa-solid fa-folder-open"></i> Proyectos</a>
-                <a href="#"><i class="fa-solid fa-bullhorn"></i> Anuncios</a>
-                <a href="#"><i class="fa-solid fa-desktop"></i> Plataforma</a>
-                <a href="#"><i class="fa-solid fa-people-group"></i> Compañero VMC</a>
-            </nav> -->
-        <!-- </div>
-    </div>
-    <footer class="footer pt-4 pb-4">
-        <p class="text-white pb-2">&copy;  VMCORREA 2022 | Todos los derechos reservados</p>
-        <a class="text-white" href="#">Aviso de privacidad</a>
-    </footer> -->
-
-
-
-
     <div class="row dashboard">
         <div class="col-xl-3 col-lg-3 col-md-12 bg-profile">.</div>
         <div class="col-xl-6 col-lg-6 col-md-12 flexbox-center">
@@ -57,21 +24,46 @@
             </div>
         </div>
         <div class="col-xl-3 col-lg-3 col-md-12 bg-menu flexbox-center">
-            <nav class="buttons-nav">
-                <a href="#"><i class="fa-solid fa-sitemap"></i> Organigrama</a>
-                <a href="#"><i class="fa-solid fa-list"></i> Recursos</a>
-                <a href="#"><i class="fa-solid fa-folder-open"></i> Proyectos</a>
-                <a href="#"><i class="fa-solid fa-bullhorn"></i> Anuncios</a>
-                <a href="#"><i class="fa-solid fa-desktop"></i> Plataforma</a>
-                <a href="#"><i class="fa-solid fa-people-group"></i> Compañero VMC</a>
+            <nav class="buttons-nav h-100 p-5">
+                <a href="#" class="btn"><i class="fa-solid fa-sitemap"></i> Organigrama</a>
+                <a href="#" class="btn"><i class="fa-solid fa-list"></i> Recursos</a>
+                <a href="#" class="btn"><i class="fa-solid fa-folder-open"></i> Proyectos</a>
+                <a href="#" class="btn"><i class="fa-solid fa-bullhorn"></i> Anuncios</a>
+                <a href="#" class="btn"><i class="fa-solid fa-desktop"></i> Plataforma</a>
+                <a href="#" class="btn"><i class="fa-solid fa-people-group"></i> Compañero VMC</a>
             </nav>
         </div>
     </div>
-    <div class="row">
-        <footer class="col-12 footer pt-4 pb-4">
-            <p class="text-white pb-2">&copy;  VMCORREA 2022 | Todos los derechos reservados</p>
-            <a class="text-white" href="#">Aviso de privacidad</a>
-        </footer>
-    </div>
+    <footer class="footer pt-4 pb-4">
+        <p class="text-white pb-2">&copy;  VMCORREA 2022 | Todos los derechos reservados</p>
+        <a class="text-white" href="#">Aviso de privacidad</a>
+    </footer>
+
+    <!-- <style>
+        body,
+            html {
+            margin: 0;
+            padding: 0;
+            }
+            .content {
+            display: flex;
+            height: 250px;
+            border: 1px solid black;
+            justify-content: space-between;
+            flex-direction: column;
+            width: 200px;
+            }
+            .box {
+            background: #0479D9;
+            height: 50px;
+            }
+    </style>
+
+    <div class="content">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div> -->
 </body>
 </html>
